stacks/elb.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  ProjectName:
    Type: String
  VpcId:
    Type: AWS::EC2::VPC::Id
  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
  ECSAMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
  InstanceType:
    Type: String
    Default: t3.small

Resources:
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [!Ref ProjectName, loadbalancer]]
      GroupDescription: !Sub "SecurityGroup for ${ProjectName} LoadBalancer"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref ProjectName, loadbalancer]]

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Ref ProjectName
      Scheme: internet-facing
      IpAddressType: ipv4
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Subnets: !Ref SubnetIds
      LoadBalancerAttributes:
        - Key: routing.http2.enabled
          Value: "false"
        - Key: deletion_protection.enabled
          Value: "true"
        - Key: idle_timeout.timeout_seconds
          Value: "60"
        - Key: access_logs.s3.enabled
          Value: "false"

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Join ["-", [!Ref ProjectName, cluster]]

  ECSAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DependsOn: ECSCluster
    Properties:
      VPCZoneIdentifier: !Ref SubnetIds
      LaunchConfigurationName: !Ref ECSInstanceLaunchConfiguration
      MinSize: "3"
      MaxSize: "3"
      DesiredCapacity: "3"
      MetricsCollection:
        - Granularity: 1Minute
    CreationPolicy:
      ResourceSignal:
        Count: "3"
        Timeout: PT15M
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: true

  ECSInstanceLaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref ECSAMI
      InstanceType: !Ref InstanceType
      IamInstanceProfile: !Ref ECSInstanceProfile
      InstanceMonitoring: false
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum update -y
          echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
          yum install -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSAutoScalingGroup
      AssociatePublicIpAddress: true
      SecurityGroups:
        - !Ref ECSInstanceSecurityGroup
      KeyName: aossas

  ECSInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "SecurityGroup for ${ProjectName} ECS Instance"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref ProjectName, sg]]

  ECSInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref ECSInstanceRole

  ECSInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role

Outputs:
  LoadBalancer:
    Value: !Ref LoadBalancer
    Export:
      Name: !Join ["-", [!Ref ProjectName, loadbalancer]]
  LoadBalancerURL:
    Value: !GetAtt LoadBalancer.DNSName
    Export:
      Name: !Join ["-", [!Ref ProjectName, loadbalancer, url]]
  LoadBalancerSecurityGroup:
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Join ["-", [!Ref ProjectName, loadbalancer, sg]]
  ECSCluster:
    Value: !Ref ECSCluster
    Export:
      Name: !Join ["-", [!Ref ProjectName, ecs, cluster]]
